# ImmuneDR

./: .dockerignore  .gitignore  .mypy.ini  Makefile  conftest.py  main.py  pyproject.toml  pytest.ini  setup.py
dependencies_keys/async_state_machine/: id_rsa  id_rsa.pub
docker/: Dockerfile
docs/: MAVLink.docx  todo.md
docs/Research/: DisableAutoLand.md  Simulation.md
docs/Research/experiments/: NorthMissionAlmostCrashIn30m_s  print_local_position.py
libs/immune_dr/git_archive/: COMMIT_EDITMSG  ORIG_HEAD  index
libs/immune_dr/src/: auto_pilot.py
libs/immune_dr/tests/: test_geo_misc.py
libs/mavlink_drone/git_archive/: COMMIT_EDITMSG  ORIG_HEAD  index
scripts/: gazebo_start.sh  run_simulation.sh  start_simulation_from_tmux.sh  symvehicle_start.sh
scripts/virtual_xserver/: record_virtual_Xserver.service  record_virtual_Xserver.sh  start_Xserver.sh  start_and_record_virtual_Xserver.sh  virtual_Xserver.service
src/: auto_pilot.py  hz_loop.py
src/drones/: auto_pilot.py  commands.py  drone_client.py  drone_daemon.py  geo.py  geo_misc.py  latest_messages.py  mavlink_types.py  navigation_utils.py  testing.py
system_tests/: config.py  mav.parm  simulation.py  test_dr.py  test_drone_controller.py  utils.py
system_tests/simulation_directory/: mav.parm  mav.tlog  mav.tlog.raw
tests/: config.py  conftest.py  dr_state_machine.py  state_machine_utils.py  takeoff_state_machine.py  test_dr.py  test_drone_controller.py  test_geo_misc.py  test_no_landing.py  test_testing_utils.py  utils.py
tests/asserts/: mav.parm
tests/assets/: mav.parm
(+8 files in other folders)
