[project]
name = "drones"
description = "drones experimental package"
version = "0.0.0"
authors = [
    { name = "Ben Sambusak", email = "ben@balmas" }
]

[tool.pytest.ini_options]
testpaths = [
    "system_tests",
    "libs/mavlink_drone/tests",
    "libs/immune_dr/tests/"
]
markers = [
    "system: marks tests as slow and comprehensive (using simulation)"
]